--- a/index.html
+++ b/index.html
@@ -73,17 +73,19 @@
             id="hero-img"
           />
           <div class="hero-section">
-            <h1 class="hero-header">
+            <div class="hero-header">
               The Bright <br />
               Furute of <br />
               Web 3.0?
-            </h1>
-            <p>
-              We dive into the evolution of the web that claims to put the power
-              of the platforms back into the hands of the people. but is it
-              really fulfilling its performance?
-              <button class="readMore-btn">READ MORE</button>
-            </p>
+            </div>
+            <div class="hero-content">
+              <p>
+                We dive into the evolution of the web that claims to put the
+                power of the platforms back into the hands of the people. but is
+                it really fulfilling its performance?
+                <button class="readMore-btn">READ MORE</button>
+              </p>
+            </div>
           </div>
         </section>
         <aside class="side-panel">
