--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
 
@@ -81,23 +83,23 @@
             <div class="hero-content">
               <p>
                 We dive into the evolution of the web that claims to put the
-                power of the platforms back into the hands of the people. but is
-                it really fulfilling its performance?
-                <button class="readMore-btn">READ MORE</button>
+                power of the platforms back into the hands of the people. <br />
+                But is it really fulfilling its performance?
               </p>
+              <button class="readMore-btn">READ MORE</button>
             </div>
           </div>
         </section>
         <aside class="side-panel">
           <div class="side-panel-content">
-            <h1>New</h1>
+            <h1 class="side-header">New</h1>
             <section class="section-1">
-              <h4>Hydrogen VS Electric Cars</h4>
+              <h4 class="title">Hydrogen VS Electric Cars</h4>
               <p>Will hyddrogen fueled cars ever catch up to EVs?</p>
             </section>
             <hr />
             <section class="section-2">
-              <h4>The Downside of AI Artistry</h4>
+              <h4 class="title">The Downside of AI Artistry</h4>
               <p>
                 What are the possible adverse effects of on-demand AI image
                 generation?
@@ -105,7 +107,7 @@
             </section>
             <hr />
             <section class="section-3">
-              <h4>Is VC Funding Drying Up?</h4>
+              <h4 class="title">Is VC Funding Drying Up?</h4>
               <p>
                 Private funding by VC firms is down 50% YOY. We atek a look at
                 thet means.
